Test changes to in-app promo activity

--- a/public/ixn/activities/hello-world/index.html
+++ b/public/ixn/activities/hello-world/index.html
@@ -2,18 +2,30 @@
 
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>Hello World Custom Activity</title>
+	<meta charset="utf-8">
+	<title>In-App Promo Offer</title>
 	<script data-main="js/main.js" src="js/require.js"></script>
 
 	<!--Styles-->
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
-	<div id="container">
-		<h1>Hello World Custom Activity</h1>
-		<p>This Activity really only does one simple thing, and that's pass the data through to the endpoints defined in the config.js</p>
-		<p>Doing this keeps this as simple as possible and thus...a hello world for Custom Interactions.</p>
+	<h1>Select Promotional Offer</h1>
+	<div style="display: inline-block; width: 200px; height: 200px; background-color: blue">
+		<h2>Save 10% on High Capacity Batteries</h2>
+		<img src="http://placecage/150/150"/>
+	</div>
+	<div style="display: inline-block; width: 200px; height: 200px; background-color: blue">
+		<h2>Save 10% on High Capacity Batteries</h2>
+		<img src="http://placecage/150/150"/>
+	</div>
+	<div style="display: inline-block; width: 200px; height: 200px; background-color: blue">
+		<h2>Save 10% on High Capacity Batteries</h2>
+		<img src="http://placecage/150/150"/>
+	</div>
+	<div style="display: inline-block; width: 200px; height: 200px; background-color: blue">
+		<h2>Save 10% on High Capacity Batteries</h2>
+		<img src="http://placecage/150/150"/>
 	</div>
 </body>
 </html>
