--- a/public/ixn/activities/hello-world/index.html
+++ b/public/ixn/activities/hello-world/index.html
@@ -11,21 +11,21 @@
 </head>
 <body>
 	<h1>Select Promotional Offer</h1>
-	<div style="display: inline-block; width: 200px; height: 200px; background-color: blue">
+	<div style="display: inline-block; width: 200px; background-color: blue">
 		<h2>Save 10% on High Capacity Batteries</h2>
-		<img src="http://placecage/150/150"/>
+		<img src="http://placecage.com/150/150"/>
 	</div>
-	<div style="display: inline-block; width: 200px; height: 200px; background-color: blue">
+	<div style="display: inline-block; width: 200px; background-color: blue">
 		<h2>Save 10% on High Capacity Batteries</h2>
-		<img src="http://placecage/150/150"/>
+		<img src="http://placecage.com/150/150"/>
 	</div>
-	<div style="display: inline-block; width: 200px; height: 200px; background-color: blue">
+	<div style="display: inline-block; width: 200px; background-color: blue">
 		<h2>Save 10% on High Capacity Batteries</h2>
-		<img src="http://placecage/150/150"/>
+		<img src="http://placecage.com/150/150"/>
 	</div>
-	<div style="display: inline-block; width: 200px; height: 200px; background-color: blue">
+	<div style="display: inline-block; width: 200px; background-color: blue">
 		<h2>Save 10% on High Capacity Batteries</h2>
-		<img src="http://placecage/150/150"/>
+		<img src="http://placecage.com/150/150"/>
 	</div>
 </body>
 </html>
